added getting car by color id
